tests/rosetta/transpiler/FS/conditional-structures-7.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/conditional-structures-7.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Conditional-structures-7' based on the file name 'conditional-structures-7.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/rosetta/transpiler/FS/conditional-structures-7.fs(40,16): error FS0039: The value or constructor 'someCondition' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/conditional-structures-7.fs(40,13): error FS0001: The type 'unit' does not have 'null' as a proper value. See also /workspace/mochi/tests/rosetta/transpiler/FS/conditional-structures-7.fs(38,12)-(38,16).
